--- a/templates/tarefas/index.html
+++ b/templates/tarefas/index.html
@@ -1,1 +1,12 @@
-<h2>Olá Rui vc é o melhor </h2>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
+</head>
+<body>
+    <h2>Olá Rui vc é o melhor </h2>
+</body>
+</html>
