--- a/templates/tarefas/index.html
+++ b/templates/tarefas/index.html
@@ -1,12 +1,27 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Lista de Tarefas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static '/css/style.css' %}">
 </head>
+
 <body>
-    <h2>Olá Rui vc é o melhor </h2>
+    <header>
+        <h3>tetetettetetetette</h3>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="{% static 'js/script.js' %}"></script>
+
 </html>
