--- a/tarefas/static/css/style.css
+++ b/tarefas/static/css/style.css
@@ -1,3 +1,89 @@
-body{
-    background-color: blueviolet;
+body {
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+/* NAVBAR */
+
+.navbar {
+    background-color: #333 !important;
+    border-bottom: 1px solid black !important;
+}
+
+.navbar-nav {
+    margin: auto !important;
+}
+
+.navbar-brand {
+    font-weight: bold !important;
+    font-size: 2em !important;
+}
+
+.nav-link {
+    color: white;
+    font-size: 1.5em !important;
+    letter-spacing: 2px;
+}
+
+/* Main */
+.list-div {
+    margin-left: 10% !important;
+    margin-right: 10% !important;
+}
+
+/* Botão Adicionar */
+.add-div {
+    background: blue !important;
+    color: white !important;
+    border-radius: 5px !important;
+    padding: 0.5 !important;
+}
+
+#add-button {
+    text-decoration: none !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
+
+/* Barra */
+.barra {
+    margin-top: 1em !important;
+}
+
+/* lupa */
+.input-group-btn {
+    border: 1px solid rgba(0, 0, 0, 0.206) !important;
+    border-radius: 5px !important;
+}
+
+/*item*/
+.item {
+    border-bottom: 1px dotted black !important;
+    height: 3em !important;
+    font-size: 2em !important;
+    margin-top: 1em !important;
+}
+
+.icones {
+    text-align: end !important;
+}
+
+.fa.fa-edit {
+    color: green !important;
+}
+
+.fa.fa-trash {
+    color: red !important;
+}
+
+.link {
+    text-decoration: none !important;
+}
+
+
+footer {
+    background-color: #333 !important;
+    border-top: 2px solid black !important;
+    color: white !important;
+    padding: 0.8em !important;
 }
