--- a/templates/tarefas/index.html
+++ b/templates/tarefas/index.html
@@ -8,20 +8,76 @@
     <title>Lista de Tarefas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static '/css/style.css' %}">
+
 </head>
 
 <body>
     <header>
-        <h3>tetetettetetetette</h3>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="javascript:void(0)">Todo</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mynavbar">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)">Tarefas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="javascript:void(0)">Entrar</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
+
     <main>
-
+        <div class="list-div">
+            <h1>Lista de Tarefas</h1>
+            <div class="row barra">
+                <div class="col-sm-2">
+                    <a id="add-button" href="">
+                        <div class="add-div">
+                            <i class="fa fa-plus"></i> Adicionar Tarefa
+                        </div>
+                    </a>
+                </div>
+                <div class="col-sm-10">
+                    <form method="get" id="search-form">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Pesquisar" name="search"
+                                value="">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" id="search-btn" type="submit">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="row item">
+                    <div class="col-sm-10">
+                        <span>
+                            <a class="link" href="">Ir ao Supermercado</a></span>
+                    </div>
+                    <div class="col-sm-2 icones">
+                        <span><i class="fa fa-edit"></i></span>
+                        <span><i class="fa fa-trash "></i></span>
+                    </div>
+                </div>
+            </div>
     </main>
-    <footer>
 
+    <footer class="fixed-bottom text-center">
+        <h5>&copy; Todos os diritos resevados a Ruizxc123</h5>
     </footer>
+
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="{% static 'js/script.js' %}"></script>
+<script src="https://kit.fontawesome.com/26b9e1896b.js" crossorigin="anonymous"></script>
 
 </html>
