--- a/templates/tarefas/index.html
+++ b/templates/tarefas/index.html
@@ -71,7 +71,7 @@
     </main>
 
     <footer class="fixed-bottom text-center">
-        <h5>&copy; Todos os diritos resevados a Ruizxc123</h5>
+        <h5>&copy; Escrito por  Ruizxc123</h5>
     </footer>
 
 
